# rust_in_the_browser

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: webpack.yml
pkg/: README.md  package.json  rust_in_the_browser.d.ts  rust_in_the_browser.js  rust_in_the_browser_bg.js  rust_in_the_browser_bg.wasm  rust_in_the_browser_bg.wasm.d.ts
src/: lib.rs
website/: README.md  bootstrap.js  bun.lockb  game-of-life.html  game-of-life.js  index.html  index.js  package.json
website/styles/: base.css  game-of-life.css  index.css  root.css
