[package]
name = "rust_in_the_browser"
version = "0.1.0"
edition = "2021"
description = "Showcases of Rust in the browser"
readme = "README.md"
repository = "https://github.com/theboiboi8/rust_in_the_browser"
homepage = ""
license = "MIT OR APACHE-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.9.0-alpha.1", features = ["getrandom"] }
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"